# ai-usage-monitor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  claude-status-hook.js  codex-status-poller.js  codex-wrapper.ps1  codex_dashboard_fastapi.py  codex_status_dashboard.py  codex_status_dashboard_start.ps1  codex_usage_report.py  commit_msg_1.txt  dashboard_common.py  package-lock.json  package.json  requirements.txt  status-capture.js
.github/: pull_request_template.md
docs/: BETA_RELEASE_CHECKLIST.md  CHANNEL_RESEARCH.md  CODE_SIGNING_POLICY.md  COMPACT_RESPONSIVE_UI_PLAN.md  ENGINEERING_STORY.md  LAUNCH_PLAN.md  PRD-claude-usage-dashboard.md  PRIVACY.md  PROMOTION_COPY.md  README.ko.md  SIGNING_SETUP.md  SIGNPATH_APPLICATION.md  UPDATER_E2E_RUNBOOK.md  UPDATER_IMPLEMENTATION_HANDOFF.md
scripts/: build-native-exe.ps1  build-native-installer.ps1  capture-readme-screenshots.js  codex-wrapper.cmd  codex-wrapper.ps1  codex_status_dashboard_start.ps1  create-updater-manifest.js  generate-launch-video.ps1  generate-marketing-assets.ps1  native-usage-tray.ps1  prepare-python-runtime.ps1  refresh-release-metadata.js  verify-release-tag.js  verify-updater-manifest.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: verify_updater_signature.rs
src-tauri/src/: analytics.rs  collector.rs  hook.rs  lib.rs  main.rs  storage.rs  update.rs  usage.rs
src-tauri/windows/: hooks.nsh
tests/: mock-codex-app-server.js  mock-codex-fail-status.js  mock-codex.js  release-tests.js  (+2 more)
(+76 files in other folders)
