[package]
name = "codex-claude-usage"
version = "1.0.0"
description = "Local-first Codex and Claude usage forecasts, alerts, costs, and actions"
authors = ["CodexUsage"]
license = "MIT"
edition = "2024"

[package.metadata.tauri-winres]
FileDescription = "Local Codex and Claude usage monitor"
ProductName = "Codex Claude Usage"
OriginalFilename = "codex-claude-usage.exe"

[lib]
name = "codex_claude_usage_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.11.5", features = ["tray-icon"] }
tauri-plugin-notification = "2.3.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
winreg = "0.56.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

[profile.dev]
debug = 0
incremental = false
